# Sinestesia

./: .gitignore  Cargo.toml  LICENSE  PRD.md  README.md  dev.akusen.sinestesia.desktop  install.sh
packaging/aur/: .SRCINFO  PKGBUILD
src/: audio.rs  config.rs  dsp.rs  main.rs  render.rs  theme.rs
