[package]
name = "sinestesia"
version = "0.1.0"
edition = "2021"
description = "Visualizzatore audio per Linux (Rust + Relm4/GTK4)"
license = "MIT"

[dependencies]
relm4 = { version = "0.9", features = ["libadwaita"] }
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_6"] }

# Audio
pipewire = "0.10"

# DSP
rustfft = "6"

# Rendering (OpenGL via GtkGLArea)
glow = "0.13"
epoxy = "0.1"
libloading = "0.8"

# Config / theme
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

# Util
anyhow = "1"
log = "0.4"
env_logger = "0.11"
